Update background image URL in index.html

--- a/index.html
+++ b/index.html
@@ -554,8 +554,8 @@
 <table align="center" border="0" cellspacing="0" cellpadding="0" width="154" style="Margin: 0; padding: 0; box-sizing: border-box; background: #FFFFFF; border-radius: 12px; border-collapse: separate; border: 1px solid #ECEDF0;">
 <tbody>
 <tr>
-<td valign="center" style="Margin: 0; box-sizing: border-box; padding: 16px 20px 3px;">
-<p style="Margin: 0; padding: 0; box-sizing: border-box; font-family: 'Arial', sans-serif; mso-line-height-rule: exactly; color: #4070F4; text-align: left; font-size: 22px; font-weight: 700; line-height: 24px;">76 243 177</p>
+<td valign="center" style="Margin: 0; box-sizing: border-box; padding: 16px 10px 3px 20px;">
+<p style="Margin: 0; padding: 0; box-sizing: border-box; font-family: 'Arial', sans-serif; mso-line-height-rule: exactly; color: #4070F4; text-align: left; font-size: 22px; font-weight: 700; line-height: 24px;">76&nbsp;243&nbsp;177</p>
 </td>
 </tr>
 <tr>
@@ -1425,7 +1425,7 @@
 </td>
 </tr>
 <tr>
-<td class="wr1" align="center" style="Margin: 0; box-sizing: border-box; background: url('bg.png'); background-position: center center; background-repeat: no-repeat; background-size: 100%; padding: 35px 15px 37px; background-color: #141928;" bgcolor="#141928">
+<td class="wr1" align="center" style="Margin: 0; box-sizing: border-box; background: url('https://isaluk.github.io/advcake-digest-NY25/bg.png'); background-position: center center; background-repeat: no-repeat; background-size: 100%; padding: 35px 15px 37px; background-color: #141928;" bgcolor="#141928">
 <table align="center" border="0" cellspacing="0" cellpadding="0" width="100%" style="Margin: 0; padding: 0; box-sizing: border-box; max-width: 600px;">
 <tbody>
 <tr>
